# go-ref-genome-base-counts

./: CMakeLists.txt  Dockerfile  docker-compose.yml
go_ref_gen_parser/: build.sh  cgowrapper.go  go.mod  main.go  ref_genome_parser_wrapper.h  run.sh
ref_genome_parser/: CMakeLists.txt  main.cpp
ref_genome_parser/include/: reference_genome_parser.hpp  version.hpp  version.hpp.in
ref_genome_parser/src/: reference_genome_parser.cpp
ref_genome_parser_wrapper/: CMakeLists.txt  main.c  ref_genome_parser_wrapper.cpp
